--- a/maps/package.json
+++ b/maps/package.json
@@ -3,6 +3,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.0.3"
+    "@faker-js/faker": "^9.0.3",
+    "@types/google.maps": "^3.58.1"
   }
 }
